--- a/MicroRuntime/Microruntime.csproj
+++ b/MicroRuntime/Microruntime.csproj
@@ -67,11 +67,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants.cs" />
     <Compile Include="Converter.cs" />
     <Compile Include="DateRange.cs" />
     <Compile Include="DateTimeUtilities.cs" />
     <Compile Include="InversionOfControl.cs" />
+    <Compile Include="Maybe.cs" />
     <Compile Include="MultidimensionalArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
