--- a/MicroRuntime/Microruntime.csproj
+++ b/MicroRuntime/Microruntime.csproj
@@ -67,7 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converter.cs" />
+    <Compile Include="DataTableConverter.cs" />
     <Compile Include="DateRange.cs" />
     <Compile Include="DateTimeUtilities.cs" />
     <Compile Include="InversionOfControl.cs" />
@@ -75,9 +75,6 @@
     <Compile Include="MultidimensionalArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
-    <Compile Include="RuntimeCache.cs" />
-    <Compile Include="Serialization.cs" />
-    <Compile Include="Slicer.cs" />
     <Compile Include="StreamUtilities.cs" />
     <Compile Include="StringUtilities.cs" />
   </ItemGroup>
