- small fix for TypeInstance
- added DiscriminatedResult

--- a/MicroRuntime/Microruntime.csproj
+++ b/MicroRuntime/Microruntime.csproj
@@ -78,6 +78,7 @@
     <Compile Include="StringUtilities.cs" />
     <Compile Include="TypeDescriptor.cs" />
     <Compile Include="TypeInstance.cs" />
+    <Compile Include="DiscriminatedResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
