added possibility to pass ctor args to TypeInstance

--- a/MicroRuntime/Microruntime.csproj
+++ b/MicroRuntime/Microruntime.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>voidsoft.MicroRuntime</RootNamespace>
-    <AssemblyName>voidsoft.MicroRuntime</AssemblyName>
+    <AssemblyName>Microruntime</AssemblyName>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
