--- a/Test/Tests.csproj
+++ b/Test/Tests.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="DateTimeUtilitiesTest.cs" />
     <Compile Include="DiscriminatedResultTest.cs" />
+    <Compile Include="FunctionalTest.cs" />
     <Compile Include="IFoo.cs" />
     <Compile Include="ITestParameter.cs" />
     <Compile Include="MaybeTest.cs" />
