added class to implement the circuit breaker / retrier pattern

--- a/Test/Tests.csproj
+++ b/Test/Tests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="MaybeTest.cs" />
     <Compile Include="MultidimensionalArrayTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RetriesTest.cs" />
     <Compile Include="TypeInstanceTests.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
