--- a/MicroRuntime/Microruntime.csproj
+++ b/MicroRuntime/Microruntime.csproj
@@ -75,6 +75,7 @@
     <Compile Include="MultidimensionalArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
+    <Compile Include="Retrier.cs" />
     <Compile Include="StreamUtilities.cs" />
     <Compile Include="StringUtilities.cs" />
     <Compile Include="TypeDescriptor.cs" />
