--- a/Test/Tests.csproj
+++ b/Test/Tests.csproj
@@ -126,7 +126,7 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MicroRuntime\Microruntime.csproj">
+    <ProjectReference Include="..\Microruntime.csproj">
       <Project>{c08c338d-73c1-414b-8787-4cbed3d375df}</Project>
       <Name>Microruntime</Name>
     </ProjectReference>
