--- a/MicroRuntime/MicroruntimeStandard.csproj
+++ b/MicroRuntime/MicroruntimeStandard.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Microruntime</AssemblyName>
+    <RootNamespace>Microruntime</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
